#7 Completed Publisher Inserter function.

--- a/views/index.pug
+++ b/views/index.pug
@@ -4,5 +4,7 @@ html
         h1 Game Library
         form(method="get" action="/addGame")
             input(type="submit" value="Insert game")
+        form(method="get" action="/addPublisher")
+            input(type="submit" value="Insert Publisher")
 
 
