#8 Added genre insertion function. Started working on a success screen.

--- a/views/index.pug
+++ b/views/index.pug
@@ -6,5 +6,7 @@ html
             input(type="submit" value="Insert game")
         form(method="get" action="/addPublisher")
             input(type="submit" value="Insert Publisher")
+        form(method="get" action="/addGenre")
+            input(type="submit" value="Insert genre")
 
 
