--- a/views/insertGame.pug
+++ b/views/insertGame.pug
@@ -18,7 +18,7 @@ body
                 br
                 select
                     option **TODO PUBLISHER SELECT** 
-                a(href="insert-publisher" target="_blank")
+                a(href="/insertPublisher" target="_blank")
                     input(type="button", value=">") 
                 br
             label(for="") Game Genre
