--- a/views/publishers.pug
+++ b/views/publishers.pug
@@ -22,5 +22,5 @@ div#container
                 td= publisher.publisherFoundedDate
     script.
         $(document).ready(function () {
-            $('#games').DataTable();
+            $('#publishers').DataTable();
         });
