#24 Have got the publisher parsing into a select in pug. Now just need to look at doing Genre.

--- a/views/index.pug
+++ b/views/index.pug
@@ -9,6 +9,6 @@ html
         form(method="get" action="/catalog/genres")
             input(type="submit" value="Genres")
         hr
-        form(method="get" action="/insert")
+        form(method="get" action="/insert/game")
             input(type="submit" value="Insert")
 
