#23 Added publisher table select to markup.

--- a/views/insertGame.pug
+++ b/views/insertGame.pug
@@ -25,8 +25,8 @@ body
             label(for="") Game Genre
                 br
                 select
-                    each genre in genres
-                        option(value=genre.genreTitle)= genre.genreTitle
+                    //- each genre in genres
+                    //-     option(value=genre.genreTitle)= genre.genreTitle
                 input(type="button", value=">")
                 br 
             input(type="button" value="Add") 
