#30, #31, #32 Added post route function.

--- a/views/insertGame.pug
+++ b/views/insertGame.pug
@@ -7,7 +7,7 @@ body
                 br
             label(for="") Game Release Date
                 br
-                input(type="text"  name="gameReleaseDate")
+                input(type="date"  name="gameReleaseDate")
                 br
             label(for="") Game Developer
                 br
