--- a/views/insertPublisher.pug
+++ b/views/insertPublisher.pug
@@ -1,6 +1,6 @@
 body 
     h3 Insert New Genre
-        form(action="") 
+        form(method="post" action="/insert/publisher") 
             label(for="") Publisher Name
                 br
                 input(type="text")
