--- a/views/index.pug
+++ b/views/index.pug
@@ -1,5 +1,6 @@
-html 
-    head 
+html
+    head
+        link(rel="shortcut icon" href="../public/favicon.ico")
     body 
         h1 Game Library
         //- Get games table
